--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-server.port=8443
+server.port=${PORT:8080}
 spring.datasource.url=jdbc:mysql://grocery-db.c9addz77j2dx.ap-south-1.rds.amazonaws.com:3306/grocery
 spring.datasource.username=admin
 spring.datasource.password=saloniarpit
@@ -10,13 +10,13 @@ spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.initialization-mode=ALWAYS
 
 
-server.ssl.key-store-type=JKS
-# The path to the keystore containing the certificate
-server.ssl.key-store=classpath:grocery-app.jks
-# The password used to generate the certificate
-server.ssl.key-store-password=saloni
-# The alias mapped to the certificate
-server.ssl.key-alias=grocery-app
+#server.ssl.key-store-type=JKS
+## The path to the keystore containing the certificate
+#server.ssl.key-store=classpath:grocery-app.jks
+## The password used to generate the certificate
+#server.ssl.key-store-password=saloni
+## The alias mapped to the certificate
+#server.ssl.key-alias=grocery-app
 
 
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
