--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5Dialect
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.initialization-mode=ALWAYS
+java.runtime.version=11
 
 
 #server.ssl.key-store-type=JKS
